src/test/ui/unboxed-closures/unboxed-closure-no-cyclic-sig.stderr
error[E0631]: type mismatch in closure arguments
  --> $DIR/unboxed-closure-no-cyclic-sig.rs:8:5
   |
LL |     g(|_| {  });
   |     ^ --- found signature defined here
   |     |
   |     expected due to this
   |
   = note: expected closure signature `fn(Option<[closure@$DIR/unboxed-closure-no-cyclic-sig.rs:8:7: 8:10]>) -> _`
              found closure signature `fn(_) -> _`
note: required by a bound in `g`
  --> $DIR/unboxed-closure-no-cyclic-sig.rs:5:24
   |
LL | fn g<F>(_: F) where F: FnOnce(Option<F>) {}
   |                        ^^^^^^^^^^^^^^^^^ required by this bound in `g`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0631`.
